[package]
name = "substack-rss-filter"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
clap = { version = "4.5.51", features = ["derive"] }
reqwest = { version = "0.12.24", features = ["blocking"] }
rss = "2.0.12"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
